# nudt_csc_2025

./: LEARNING.md  LICENSE  README.md  RESOURCES.md
sysycompiler/: Cargo.toml
sysycompiler/src/: main.rs
sysycompiler/src/backend/: asm2string.rs  codegen.rs  mod.rs  peephole.rs
sysycompiler/src/backend/instrction_schedule/: dependence_graph.rs  mod.rs  schedule.rs  schedule_model.rs
sysycompiler/src/backend/mir/: mir_block.rs  mir_context.rs  mir_function.rs  mir_inst.rs  mir_label.rs  mir_operand.rs  mod.rs  regs.rs
sysycompiler/src/backend/reg_alloc/: mod.rs  regalloc.rs
sysycompiler/src/backend/reg_alloc/gcregalloc/: graph_coloring_regalloc.rs  interference_graph.rs  live_interval.rs  mod.rs
sysycompiler/src/frontend/: ir2string.rs  irgen.rs  mod.rs  symboltable.rs  typecheck.rs
sysycompiler/src/frontend/ir/: basicblock.rs  context.rs  defuse.rs  function.rs  global.rs  instruction.rs  mod.rs  my_lib.rs  typ.rs  value.rs
sysycompiler/src/frontend/lalrpop/: ast.rs  macro_replace.rs  mod.rs  sysy.lalrpop
sysycompiler/src/passes/: mod.rs  pass_context.rs  pass_manager.rs
sysycompiler/src/passes/pass/: mod.rs  structure.rs
sysycompiler/src/passes/pass/analysis/: alias.rs  cfa.rs  domra.rs  fca.rs  live_inst.rs  loopa.rs  ltdomra.rs  mcfa.rs  mod.rs
sysycompiler/src/passes/pass/optimize/: cie.rs  dce.rs  dfe.rs  dpe.rs  gtl.rs  inline.rs  lbc.rs  loopelimi.rs  loopicm.rs  loopsimplify.rs  loopunroll.rs  mem2reg.rs  mod.rs  pre_mem2reg.rs  reg2mem.rs  sccp.rs  tco.rs  ube.rs
sysycompiler/src/utils/: linked_list.rs  mod.rs  storage.rs
