[package]
name = "sysycompiler"
version = "0.1.0"
edition = "2024"
authors = ["oyzl xdw zgx lrz hhw"]

[[bin]]
name = "compiler"
path = "src/main.rs"    

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
hexponent = "0.3.1"
lalrpop = "0.22.1"
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
once_cell = "1.21.3"
regex = "1.11.1"
rustc-hash = "2.1.1"
